# voxnode

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
scripts/: reset-config.sh
systemd/: voxnode-portal.service  voxnode-recorder.service  voxnode-updater.service  voxnode-updater.timer  voxnode-uploader.service  voxnode-watchdog.service
tools/: check_for_upgrade.sh  install.sh  upgrade.sh
voxnode/: __init__.py  __main__.py  config.py  portal.py  recorder.py  uploader.py  version.py  watchdog.py
